--- a/Laboratorio5.qsf
+++ b/Laboratorio5.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEMA5F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY VGA_Controller
+set_global_assignment -name TOP_LEVEL_ENTITY mux_cuadrante
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "10:01:39  APRIL 28, 2019"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
@@ -49,6 +49,10 @@ set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "SYSTEMVERILOG HDL" -section_id eda_simulation
 set_global_assignment -name SYSTEMVERILOG_FILE FSM.sv
 set_global_assignment -name SYSTEMVERILOG_FILE VGA_Controller.sv
+set_global_assignment -name SYSTEMVERILOG_FILE clk_div.sv
+set_global_assignment -name SYSTEMVERILOG_FILE mux_RGB.sv
+set_global_assignment -name SYSTEMVERILOG_FILE selector.sv
+set_global_assignment -name SYSTEMVERILOG_FILE mux_cuadrante.sv
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
