--- a/Laboratorio5.qsf
+++ b/Laboratorio5.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEMA5F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY mux_cuadrante
+set_global_assignment -name TOP_LEVEL_ENTITY hlineGenerator
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "10:01:39  APRIL 28, 2019"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
@@ -53,7 +53,9 @@ set_global_assignment -name SYSTEMVERILOG_FILE clk_div.sv
 set_global_assignment -name SYSTEMVERILOG_FILE mux_RGB.sv
 set_global_assignment -name SYSTEMVERILOG_FILE selector.sv
 set_global_assignment -name SYSTEMVERILOG_FILE mux_cuadrante.sv
+set_global_assignment -name SYSTEMVERILOG_FILE hlineGenerator.sv
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE vlineGenerator.sv
